# portafolio

./: README.md
portfDoc/: pyproject.toml
portfDoc/portfdoc/: portf_doc.py  portfolio00.py
portfDoc/tests/: test_portfdoc.py
