[tool.poetry]
name = "portfDoc"
version = "0.1.0"
description = ""
authors = ["auxerre"]

[tool.poetry.dependencies]
python = "^3.9"
yfinance = "^0.1.59"
matplotlib = "^3.4.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
